--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Automatic Task Scheduler</title>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js"></script>
     <script src="main.js" defer></script>
     <link
       rel="stylesheet"
